Archive2/b4/6ec6d9987ccb66/output
main.cpp:53:19: error: non-const lvalue reference to type 'std::ostream' (aka 'basic_ostream<char>') cannot bind to a temporary of type 'std::__1::basic_ostringstream<char, std::__1::char_traits<char>, std::__1::allocator<char> >'
    std::ostream& buf_ref = std::ostringstream() << 'a'; // the ostringstream temporary
                  ^         ~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
